# speech-to-text

./: .gitignore  README.md  mcp_config.json  pyproject.toml  requirements.txt
src/: app.py  mcp_client.py  prompts.py  speech_to_text.py  text_processors.py
src/agents/: README.md  agent.py  example.py  mcp_integration.py  speech_agent.py
src/agents/tools/: think.py
src/api_providers/: base_provider.py  groq_provider.py  openai_provider.py  openrouter_provider.py  provider_factory.py
src/config/: settings.py
src/utils/: logger.py
tests/: conftest.py  test_agent.py  test_mcp_client.py  test_transcriber.py
tests/integration/: __init__.py  test_app_flow.py
